Bug 1384654 - Horizontally flip the 'pin to overflow' animation during the fade out when in RTL. r=Gijs
MozReview-Commit-ID: 7OKoPYdPYNV

UltraBlame original commit: 992636ea8646c921c5cb59c86b7287a6cd746143

--- a/browser/themes/shared/toolbarbutton-icons.inc.css
+++ b/browser/themes/shared/toolbarbutton-icons.inc.css
@@ -2999,6 +2999,54 @@ duration
 730ms
 ;
 }
+#
+nav
+-
+bar
+-
+overflow
+-
+button
+[
+animate
+]
+[
+fade
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+>
+.
+toolbarbutton
+-
+animatable
+-
+box
+>
+.
+toolbarbutton
+-
+animatable
+-
+image
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
 %
 endif
 #
